# ZeroTrust-StudyForcer

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BruteForce.studyforcer.txt  CHANGELOG.md  How_to_read.md  LICENSE  OSCAR_OVER_ARR.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  tsconfig.app.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml
Arch/: 01-executive-overview.md  02-structural-components.md  03-data-flow.md  04-control-flow.md  05-state-management.md  06-anchor-system.md  07-testing-architecture.md  README.md
Docs/: ARCHITECTURE.md  BUGS.md  CHANGELOG.md  README.md  ROADMAP.md  SUGGESTIONS.md  TESTING-REPORT.md  VISION.md  ZTSF_PERSONALITY_LAYER.md
course-builder/: course-builder.html
e2e/: app.spec.ts
public/: cissp-custom-order.json  default-course.json  oscp-exam-prep-course.json  oscp-official-lab-course.json  oscp-pdf-study-course.json  secai-course.json
scripts/: build-all.cjs  build-git-release.cjs  build-release-notes.cjs  release-wave.cjs  version-check.cjs
src/: App.tsx  globals.css  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AppHeader.tsx  BurnDownView.tsx  CareerMode.tsx  CertPathView.tsx  ComplianceReport.tsx  CourseBuilder.tsx  CourseProvider.tsx  CourseSelector.tsx  DailyBriefing.tsx  DailyLogModal.tsx  DatePicker.tsx  DayDetailDrawer.tsx  DomainAnalyzer.tsx  ErrorBoundary.tsx  ExamAlertBanner.tsx  Popover.tsx  (+28 more)
tools/: course-builder.html
(+111 files in other folders)
