[package]
name = "zero-trust-studyforcer"
version = "2.4.11"
description = "ZeroTrust.StudyForcer Desktop App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
rss = "2.0"
atom_syndication = "0.12"
tokio = { version = "1", features = ["rt", "time", "sync"] }
chrono = "0.4"
md5 = "0.7"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
